Fixing white spaces

--- a/app/styles/community-opnion-container.scss
+++ b/app/styles/community-opnion-container.scss
@@ -7,6 +7,7 @@
        display: block;
        margin-top: -5%;
        padding-top: 1%;
+       padding-bottom: 8%;
 
      .community-opnion-intro {
        
