--- a/app/styles/knowledge.scss
+++ b/app/styles/knowledge.scss
@@ -1,23 +1,24 @@
-$topbar-height: 70px;
-$actioncontainer-height: 75px;
-$actions-height: $actioncontainer-height * 4;
-$content-detail-height: 96vh;
-$content-detail-height-mobile: 220vw;
-html{
-  height: 100%;
-}
-body{
-  height: 100%;
-}
-
 .knowledge-container {
   width: 100%;
   height: auto;
   position: absolute;
-  display: flex;
-  flex-wrap: wrap;
+  display: inline-block;
+      overflow: hidden;
+-webkit-backface-visibility: hidden;
+-moz-backface-visibility:    hidden;
+-ms-backface-visibility:     hidden;
 
-  .divider {  
+ 
+  .knowledge-fixed-background {
+    position: fixed;
+    left: 0;
+    right: 0;
+    z-index: -999;
+    width: 100%;
+    height: 40vw;
+    overflow: hidden;
+    
+ .divider {  
         width: 100%;
         height: 20vw;
         display: block;     
@@ -31,15 +32,7 @@ body{
         }
     }
   
-  .knowledge-fixed-background {
-    position: fixed;
-    left: 0;
-    right: 0;
-    z-index: -999;
-    width: 100%;
-    height: 40vw;
-    overflow: hidden;
-    
+
      .background-image {
         position: absolute;
         left: 0;
@@ -72,13 +65,12 @@ body{
     flex-direction: column;
     justify-content: center;
     position: relative;
-    display: block;
+    display: inline-block;
     width: 100%;
-               z-index: 1;
-        overflow: hidden;
+    overflow: hidden;
 
     .background-over-container {
-      height: 30.5vw;
+      height: 40vw;
     }
   }
 }
@@ -88,8 +80,8 @@ body{
    .knowledge-fixed-background {
     .presentation-container {
 
-      top: $topbar-height;
-      height: 40vw;
+     top: $topbar-height;
+      height: 82.5%;
       display: flex;
       align-items: center;
       margin-left: 8.0em;
